--- a/LightMasterMVVM/LightMasterMVVM/Views/DataAnalysis.xaml
+++ b/LightMasterMVVM/LightMasterMVVM/Views/DataAnalysis.xaml
@@ -6,10 +6,12 @@
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="LightMasterMVVM.Views.DataAnalysis">
   <StackPanel>
-    <Button Content="Create New Graph" Command="{Binding CreateGraphOfData}"/>
-    <ScrollViewer Height="600">
-      <oxy:PlotView Controller="{Binding customController}" Model="{Binding DataPoints}"  IsMouseWheelEnabled="False" Height="{Binding GraphHeight}" Width="900"></oxy:PlotView>
-    </ScrollViewer>
+    <Border Background="#1E1E1E" BorderBrush="Black" BorderThickness="4,0,0,4" CornerRadius="6" Width="1000">
+      <ScrollViewer Height="600">
+        <oxy:PlotView Foreground="White" Background="#1E1E1E" Controller="{Binding customController}" Model="{Binding DataPoints}"  IsMouseWheelEnabled="False" Height="{Binding GraphHeight}" Width="900"></oxy:PlotView>
+      </ScrollViewer>
+    </Border>
+
 
   </StackPanel>
 </UserControl>
